feat : 문제6. 교육생들간 비교 기능 추가